Fixed the overflow problem caused by framer motin by adding overflow to root

--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,8 @@
 
 :root {
     font-family: 'Inter', sans-serif;
+    overflow-x: hidden;
+    width: 100%;
+    position: relative;
 }
 
